<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mapbox.android.gestures.testapp.HelpDialogFragment">

    <TextView
        android:id="@+id/help_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/help_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help_description" />

    <Button
        android:id="@+id/button_help_got_it"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/help_conf_button"
        android:textColor="@color/colorAccent" />

</LinearLayout>
