<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mapbox.android.gestures.testapp.MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/mutually_exclusive" />

        <Spinner
            android:id="@+id/spinner_exclusives"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:gravity="center" />

        <Button
            android:id="@+id/button_mapbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/mapbox_button"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <SeekBar
                android:id="@+id/progress_threshold_rotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:max="60" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/progress_threshold_rotate"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/rotate_threshold" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <SeekBar
                android:id="@+id/progress_threshold_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:max="300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/progress_threshold_scale"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/scale_threshold" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
